[gd_scene load_steps=20 format=2]

[ext_resource path="res://addons/dialogic/Documentation/Theme/DocumentationH1.tres" type="DynamicFont" id=1]
[ext_resource path="res://addons/dialogic/Documentation/Theme/DocumentationH4.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/HUDs/Pause/pause.gd" type="Script" id=3]
[ext_resource path="res://addons/dialogic/Example Assets/Fonts/DefaultBoldFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://addons/dialogic/Documentation/Theme/DocumentationH3.tres" type="DynamicFont" id=5]
[ext_resource path="res://addons/dialogic/Example Assets/Fonts/Overlock/Overlock-Black.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://addons/dialogic/Documentation/Theme/DocumentationH5.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scenes/HUDs/Options/Options.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/dialogic/Example Assets/Fonts/Overlock/Overlock-BlackItalic.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Sprites/UI/Icons/Icon HUD/Pause.png" type="Texture" id=10]
[ext_resource path="res://Sprites/UI/Icons/Icon HUD/Inicio.png" type="Texture" id=11]
[ext_resource path="res://Sprites/UI/Icons/Icon HUD/Opcoes.png" type="Texture" id=12]
[ext_resource path="res://Sprites/UI/Icons/Icon HUD/Jogar.png" type="Texture" id=13]
[ext_resource path="res://Sprites/UI/Icons/Icon HUD/Sair.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Icons_Config/Component 9.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 9 )

[sub_resource type="GDScript" id=3]
script/source = "extends Control

onready var current_language = (TranslationServer.get_locale())

var playerDir = 0
var player : Spatial

func _ready():
	
	#$Button_resolution.text = \"Button_resolution\"
	
	# conecta os botões dos idiomas 
	for btn in get_tree().get_nodes_in_group(\"language_btn\"):
		btn.connect(\"toggled\", self, \"_on_language_toggled\", [btn.name])
		# marca o botão com o idioma atual
		btn.pressed = true if btn.name == current_language else false

func _on_language_toggled(button_pressed, language):
	if button_pressed:
		TranslationServer.set_locale(language)
		current_language = language

   # Seleção de Personagem
func instance_node(node, location, pararent):
	var node_instance = node.instance()
	pararent.add_child(node_instance)
	node_instance.global_position = location
	return node_instance
"

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 6 )

[node name="Pause" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Control_Options" parent="." instance=ExtResource( 8 )]

[node name="BT_Exit" type="Button" parent="Control_Options"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -131.0
margin_top = 48.0
margin_right = -91.0
margin_bottom = 97.0
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 2 )
icon = ExtResource( 15 )
flat = true
icon_align = 1
expand_icon = true

[node name="BT_Pause" type="Button" parent="."]
anchor_left = 0.942
anchor_top = 0.025
anchor_right = 0.991
anchor_bottom = 0.108
margin_left = 0.391968
margin_right = 0.215942
margin_bottom = 0.199997
custom_fonts/font = ExtResource( 4 )
icon = ExtResource( 10 )
flat = true
icon_align = 1
expand_icon = true

[node name="Panel_Pause" type="Panel" parent="."]
visible = false
self_modulate = Color( 0, 0, 0, 0.415686 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PauseText" type="Label" parent="Panel_Pause"]
visible = false
anchor_left = 0.367
anchor_top = 0.08
anchor_right = 0.632
anchor_bottom = 0.218
margin_left = 12.4
margin_top = 5.0
margin_right = 12.4
margin_bottom = 5.0
custom_fonts/font = ExtResource( 1 )
text = "Pausado"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel_Pause"]
anchor_left = 0.354
anchor_top = 0.214
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 85.504
margin_top = 95.6
margin_right = 236.0
margin_bottom = 267.0
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/separation = 20
alignment = 1

[node name="Exit" type="Button" parent="Panel_Pause/VBoxContainer"]
modulate = Color( 0.952941, 0.952941, 0.952941, 1 )
margin_right = 300.0
margin_bottom = 101.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
icon = ExtResource( 13 )
flat = true

[node name="Home" type="Button" parent="Panel_Pause/VBoxContainer"]
modulate = Color( 0.952941, 0.952941, 0.952941, 1 )
margin_top = 121.0
margin_right = 300.0
margin_bottom = 222.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
icon = ExtResource( 11 )
flat = true

[node name="BT_Options" type="Button" parent="Panel_Pause/VBoxContainer"]
modulate = Color( 0.952941, 0.952941, 0.952941, 1 )
margin_top = 242.0
margin_right = 300.0
margin_bottom = 343.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
icon = ExtResource( 12 )
flat = true

[node name="Panel_Options" type="Panel" parent="."]
visible = false
self_modulate = Color( 0, 0, 0, 0.415686 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Panel_Options"]
anchor_left = 0.312
anchor_top = 0.04
anchor_right = 0.687
anchor_bottom = 0.192
margin_left = 0.399994
margin_right = 0.399963
custom_fonts/font = ExtResource( 5 )
text = "Opções"
align = 1
valign = 1

[node name="sound" type="Label" parent="Panel_Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = -89.0
margin_right = 164.0
margin_bottom = -47.0
custom_fonts/font = ExtResource( 7 )
text = "som"
valign = 1

[node name="HSlider" type="HSlider" parent="Panel_Options/sound"]
margin_left = 66.0
margin_top = 1.0
margin_right = 216.0
margin_bottom = 51.0
rect_scale = Vector2( 1, 0.99323 )
min_value = -30.0
max_value = 0.0

[node name="Button_resolution" type="Button" parent="Panel_Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -164.0
margin_right = 73.0
margin_bottom = -114.0
custom_fonts/font = SubResource( 1 )
text = "Resolução"
icon_align = 1

[node name="BT_Exit" type="Button" parent="Panel_Options"]
anchor_left = 0.925
anchor_top = 0.067
anchor_right = 0.977
anchor_bottom = 0.147
margin_left = 2.79999
margin_top = -0.200001
margin_right = -0.448059
margin_bottom = 1.8
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 2 )
icon = ExtResource( 14 )
flat = true
icon_align = 1
expand_icon = true

[node name="Label_Options" type="Label" parent="Panel_Options"]
anchor_left = 0.312
anchor_top = 0.04
anchor_right = 0.687
anchor_bottom = 0.192
margin_left = 0.399994
margin_right = 0.399963
custom_fonts/font = ExtResource( 5 )
text = "Opções"
align = 1
valign = 1

[node name="idiomas" type="VBoxContainer" parent="Panel_Options"]
anchor_left = 0.187
anchor_top = 0.56
anchor_right = 0.805
anchor_bottom = 0.853
margin_left = 0.511993
margin_top = -8.0
margin_right = -0.320068
margin_bottom = 0.199982
script = SubResource( 3 )

[node name="pt_BR" type="CheckBox" parent="Panel_Options/idiomas" groups=["language_btn"]]
margin_right = 631.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 4 )
shortcut_in_tooltip = false
action_mode = 0
text = "Português"
flat = true
expand_icon = true

[node name="en_US" type="CheckBox" parent="Panel_Options/idiomas" groups=["language_btn"]]
margin_top = 49.0
margin_right = 631.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 4 )
shortcut_in_tooltip = false
action_mode = 0
text = "English"
flat = true
expand_icon = true

[node name="es_ES" type="CheckBox" parent="Panel_Options/idiomas" groups=["language_btn"]]
margin_top = 98.0
margin_right = 631.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 5 )
shortcut_in_tooltip = false
action_mode = 0
text = "Español"
flat = true
expand_icon = true

[connection signal="pressed" from="Control_Options/BT_Exit" to="." method="_on_BT_Exit_pressed"]
[connection signal="pressed" from="BT_Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="Panel_Pause/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Panel_Pause/VBoxContainer/Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="Panel_Pause/VBoxContainer/BT_Options" to="." method="_on_BT_Options_pressed"]
[connection signal="value_changed" from="Panel_Options/sound/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Panel_Options/Button_resolution" to="." method="_on_Button_resolution_pressed"]
[connection signal="pressed" from="Panel_Options/BT_Exit" to="." method="_on_BT_Exit_pressed"]
